# wildside

./: .biomeignore  .checkov.yml  .dockerignore  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .redocly.lint-ignore.yaml  .yamllint  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  biome.jsonc  biome.toml  dylint.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml  rustc-ice-2026-04-08T10_08_57-557.txt  rustc-ice-2026-04-08T10_08_57-559.txt  rustc-ice-2026-04-08T10_08_57-563.txt  rustc-ice-2026-04-08T10_08_59-560.txt  rustc-ice-2026-04-08T10_08_59-566.txt  rustc-ice-2026-04-08T10_08_59-574.txt  rustc-ice-2026-04-08T10_09_02-596.txt  rustc-ice-2026-04-08T10_09_04-614.txt  rustc-ice-2026-04-09T13_58_33-45491.txt  rustc-ice-2026-04-10T11_57_56-301.txt  rustc-ice-2026-04-10T11_57_56-302.txt  rustc-ice-2026-04-10T11_57_57-304.txt  rustc-ice-2026-04-10T11_57_57-305.txt  rustc-ice-2026-04-10T11_57_59-312.txt  rustc-ice-2026-04-10T11_57_59-313.txt  rustc-ice-2026-04-10T11_58_01-330.txt  rustc-ice-2026-04-10T11_58_04-348.txt  rustc-ice-2026-04-16T22_12_00-658485.txt  (+14 more)
backend/: Cargo.toml  diesel.toml
backend/crates/pagination/: Cargo.toml
backend/fixtures/example-data/: seeds.json
backend/migrations/2025-12-10-000000_create_users/: down.sql  up.sql
backend/migrations/2025-12-23-000000_create_idempotency_keys/: down.sql  up.sql
backend/migrations/2025-12-26-000000_idempotency_keys_composite_pk/: down.sql  up.sql
backend/migrations/2025-12-28-000000_add_mutation_type_to_idempotency_keys/: down.sql  up.sql
backend/migrations/2025-12-29-000000_create_routes/: down.sql  up.sql
backend/migrations/2025-12-29-000001_create_user_preferences/: down.sql  up.sql
backend/migrations/2025-12-29-000002_create_route_notes/: down.sql  up.sql
backend/migrations/2025-12-29-000003_create_route_progress/: down.sql  up.sql
backend/migrations/2026-01-16-000000_create_example_data_runs/: down.sql  up.sql
backend/migrations/2026-02-06-012424_schema_baseline_catalogue_descriptor_user_state/: down.sql  up.sql
backend/migrations/2026-02-20-000000_create_offline_bundles_and_walk_sessions/: down.sql  up.sql
backend/migrations/2026-02-24-000000_create_osm_ingestion_provenance/: down.sql  up.sql
backend/migrations/2026-02-28-000000_create_overpass_enrichment_provenance/: down.sql  up.sql
backend/migrations/2026-03-07-000000_add_non_negative_revision_checks/: down.sql  up.sql
backend/migrations/2026-03-08-000000_add_job_id_to_overpass_enrichment_provenance/: down.sql  up.sql
backend/migrations/2026-05-01-000000_add_users_created_at_id_index/: down.sql  up.sql
backend/src/: doc.rs  er_snapshots.rs  er_snapshots_tests.rs  lib.rs  main.rs  test_support.rs  tests.rs
backend/src/api/: error.rs  health.rs  mod.rs  users.rs
backend/src/domain/: annotations.rs  auth.rs  enrichment_provenance_error_mapping.rs  er_diagram.rs  error.rs  example_data.rs  health.rs  idempotency.rs  interest_theme.rs  localization.rs  mod.rs  offline_bundle_service.rs  offline_bundle_service_idempotency.rs  offline_bundle_service_idempotency_tests.rs  offline_bundle_service_support.rs  offline_bundle_service_tests.rs  osm_ingestion.rs  osm_ingestion_mapping.rs  osm_ingestion_service_helpers.rs  osm_ingestion_tests.rs  osm_ingestion_validation.rs  pagination_errors.rs  ports.rs  preferences.rs  preferences_service.rs  preferences_service_tests.rs  route_submission.rs  semantic_icon_identifier.rs  slug.rs  trace_id.rs  user.rs  user_events.rs  user_interests.rs  user_onboarding.rs  user_state_schema_audit.rs  user_state_schema_audit_tests.rs  users_pagination.rs  walk_session_service.rs  walk_session_service_tests.rs
backend/src/er_snapshots/: snapshot_io.rs
backend/src/example_data/: config.rs  mod.rs  startup.rs
backend/src/inbound/: mod.rs
backend/src/middleware/: mod.rs  trace.rs
backend/src/models/: error.rs  mod.rs  user.rs
backend/src/observability/: mod.rs  pagination_errors.rs
backend/src/outbound/: mod.rs  osm_source.rs
backend/src/server/: config.rs  metrics.rs  mod.rs  state_builders.rs
backend/src/test_support/: overpass_enrichment.rs  redis.rs
backend/src/ws/: display_name.rs  messages.rs  mod.rs  socket.rs
backend/tests/: adapter_guardrails.rs  admin_enrichment_reporting_bdd.rs  atexit_cleanup_tests.rs  catalogue_descriptor_ingestion_bdd.rs  catalogue_descriptor_read_models_bdd.rs  catalogue_endpoints_bdd.rs  declare_test_support_compile_fail.rs  diesel_example_data_runs_repository.rs  diesel_login_users_adapters.rs  diesel_offline_bundle_repository.rs  diesel_profile_interests_adapters.rs  diesel_route_annotation_repository.rs  diesel_user_preferences_repository.rs  diesel_user_repository.rs  diesel_walk_session_repository.rs  er_snapshots_bdd.rs  example_data_runs_bdd.rs  example_data_seeding_bdd.rs  health_probes_bdd.rs  job_structs_bdd.rs  offline_bundle_walk_session_bdd.rs  offline_walk_endpoints_bdd.rs  openapi_schemas_bdd.rs  osm_ingestion_bdd.rs  overpass_enrichment_bdd.rs  pg_embed_isolation.rs  pg_embedded_smoke.rs  ports_behaviour.rs  pwa_annotations_bdd.rs  pwa_preferences_bdd.rs  route_cache_key_canonicalization_bdd.rs  route_cache_redis_bdd.rs  route_cache_redis_jitter_bdd.rs  route_cache_redis_ttl_bdd.rs  route_queue_apalis_bdd.rs  schema_baseline_bdd.rs  schema_baseline_unit.rs  session_config_bdd.rs  session_key_fingerprint_bdd.rs  startup_mode_composition_bdd.rs  (+8 more)
backend/tests/adapter_guardrails/: doubles.rs  doubles_annotations.rs  doubles_catalogue.rs  doubles_enrichment_reporting.rs  doubles_offline_walk.rs  doubles_preferences.rs  doubles_users.rs  doubles_ws.rs  harness.rs  harness_defaults.rs  mod.rs  recording_double_macro.rs  steps.rs
backend/tests/admin_enrichment_reporting_bdd/: steps_auth.rs  steps_pagination.rs  steps_validation.rs
backend/tests/catalogue_descriptor_ingestion_bdd/: assertions.rs  error_steps.rs
backend/tests/diesel_walk_session_repository/: test_params.rs
backend/tests/features/: admin_enrichment_reporting.feature  (+28 more)
crates/example-data/: Cargo.toml
(+857 files in other folders)
