[workspace]
members = ["backend"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "deny", priority = -1 } # low priority to avoid clippy::lint_groups_priority warnings

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
