[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix = "0.13"
actix-web-actors = "4"
# Use cookie-session to keep sessions stateless and avoid external stores like Redis.
# Note: each session is stored in a single cookie (~4 KB max); larger sessions risk 500 errors.
actix-session = { version = "0.11", features = ["cookie-session"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

uuid = { version = "1", features = ["serde", "v4"] }

# OpenAPI
utoipa = { version = "5", features = ["macros", "uuid", "yaml", "actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

[dev-dependencies]
actix-rt = "2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
