[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix = "0.13"
actix-web-actors = "4"
# Use cookie-session to keep sessions stateless and avoid external stores like Redis.
# Note: each session is stored in a single cookie (~4 KB max); larger sessions risk 500 errors.
actix-session = { version = "0.11", features = ["cookie-session"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
regex = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["macros"] }

# OpenAPI
utoipa = { version = "5", features = ["macros", "uuid", "yaml", "actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# Optional: Prometheus metrics via middleware + /metrics endpoint
# Kept behind the `metrics` feature to allow local builds without
# fetching new dependencies. Enable with `--features metrics`.
actix-web-prom = { version = "0.10", optional = true }

[features]
default = []
# Enable Prometheus metrics middleware and endpoint
metrics = ["dep:actix-web-prom"]

[dev-dependencies]
actix-rt = "2"
rstest = "0.26"
insta = { version = "1", features = ["json", "redactions"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3

[[bin]]
name = "openapi-dump"
path = "src/bin/openapi_dump.rs"

[workspace.lints.rust]
allow = "forbid"

