[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2"
actix-web = "4"
actix-ws = "0.3"
# Type-erased middleware requires actix-service utilities.
actix-service = "2"
# Use cookie-session to keep sessions stateless and avoid external stores like Redis.
# Note: each session is stored in a single cookie (~4 KB max); larger sessions risk 500 errors.
actix-session = { version = "0.11", features = ["cookie-session"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
regex = "1"

async-trait = "0.1.89"
color-eyre = "0.6.5"
pg_embedded_setup_unpriv = { package = "pg-embed-setup-unpriv", version = "0.1.0" }
postgresql_embedded = { version = "0.20.0", features = ["tokio"] }
paste = "1.0.15"
thiserror = "2.0.17"

# Diesel ORM with PostgreSQL and async support
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.5", features = ["bb8", "postgres"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["macros"] }

# OpenAPI
utoipa = { version = "5", features = ["macros", "uuid", "yaml", "actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# Optional: Prometheus metrics via middleware + /metrics endpoint
# Kept behind the `metrics` feature to allow local builds without
# fetching new dependencies. Enable with `--features metrics`.
actix-web-prom = { version = "0.10", optional = true }

zeroize = "1.7"

[features]
default = []
# Enable Prometheus metrics middleware and endpoint
metrics = ["dep:actix-web-prom"]
# Expose test utilities for integration tests
test-support = []

[dev-dependencies]
# Enable test-support feature for integration tests
backend = { path = ".", features = ["test-support"] }
actix-rt = "2"
# Actix uses actix-http types for request/response plumbing in test utilities.
actix-http = "3"
# Actix codec helpers for framing WebSocket test sockets.
actix-codec = "0.5.2"
# Actix Web Client for WebSocket and HTTP integration testing.
awc = "3.8.1"
env-lock = "1.0.1"
futures = "0.3"
rstest = "0.26"
rstest-bdd = "0.2.0"
rstest-bdd-macros = "0.2.0"
insta = { version = "1", features = ["json", "redactions"] }
postgres = { version = "0.19.12", features = ["with-uuid-1"] }
# Diesel migration runner for integration tests
diesel_migrations = "2.2"

[[bin]]
name = "openapi-dump"
path = "src/bin/openapi_dump.rs"

[[bin]]
name = "pg_worker"
path = "src/bin/pg_worker.rs"
