[package]
name = "example-data"
version = "0.1.0"
edition = "2024"
description = "Deterministic example user data generation for demonstration purposes"
license = "MIT"

[dependencies]
fake = "2.10.0"
rand = "0.8.5"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
rstest = "0.26"
rstest-bdd = "0.3.2"
rstest-bdd-macros = "0.3.2"

[lints]
workspace = true
