[package]
name = "example-data"
version = "0.1.0"
edition = "2024"
description = "Deterministic example user data generation for demonstration purposes"
license = "MIT"

[dependencies]
base-d = "3.0.31"
fake = "4.4"
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
rstest = "0.26"
rstest-bdd = "0.3.2"
rstest-bdd-macros = "0.3.2"

[lints]
workspace = true
