[package]
name = "pagination"
version = "0.1.0"
edition = "2024"
description = "Shared opaque cursor and pagination envelope primitives for Wildside backend endpoints"
license = "MIT"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[dev-dependencies]
rstest = "0.26"
rstest-bdd = "0.5.0"
rstest-bdd-macros = { version = "0.5.0", features = ["strict-compile-time-validation"] }

[lints]
workspace = true
